update custom fields. Thanks Thomas Mosmant

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="author" content="Thomas Mosmant" />
     <meta
       name="description"
-      content="I'm Thomas Mosmant, a web developer with good knowledge of frontend technics."
+      content="I'm Alexandre, a Data Scientist with strong background of computer science and scalable architectures."
     />
     <meta
       name="keywords"
-      content="Thomas Mosmant, Mosmant, megatitipopo, web developer, resume, CV, Ember, Ember.js, HTML, CSS, SVG, Javascript, JS"
+      content="Alexandre RASTEL, Rastel, arastel, data science, resume, CV, data scientist"
     />
     <meta name="robots" content="index, follow" />
     <meta name="revisit-after" content="2 days" />
@@ -40,22 +40,16 @@
       <article>
         <h1 class="fr">Salut,</h1>
         <p class="fr">
-          Je m'appelle Thomas, j'ai <span class="age"></span> ans et je suis
-          <b>développeur web</b>. Je travaille depuis plusieurs années en tant
-          que <b>frontend</b> et j'ai pu acquérir de solides compétences dans ce
-          domaine. Actuellement, je suis Engineering Manager chez
-          <a href="https://luko.eu" target="_blank">Luko</a> et avant j'étais
-          lead développeur chez
-          <a href="https://october.eu" target="_blank">October</a>.
+          Je m'appelle Alexandre, j'ai <span class="age"></span> ans et je suis
+          <b>machine learning engineer</b>. Je travaille depuis plusieurs années en tant
+          que <b>data scientist</b> chez <a href="https://www.predictivelayer.com" target="_blank">PredictiveLayer</a>.
         </p>
         <h1 class="en">Hello,</h1>
         <p class="en">
-          I'm Thomas Mosmant, a <span class="age"></span> yo
-          <b>web developer</b> from Montreuil, France. I've been working as a
-          <b>frontend</b> for several years now and have been able to build
-          solid skills in this area. I work as Engineering Manager at
-          <a href="https://luko.eu" target="_blank"></a> and before I was lead
-          developer at <a href="https://october.eu" target="_blank">October</a>.
+          I'm Alexandre, a <span class="age"></span> yo
+          <b>machine learning engineer</b> from Paris, France. I've been working as a
+          <b>data scientist</b> for several years  at
+          <a href="https://www.predictivelayer.com" target="_blank">PredictiveLayer</a>.
         </p>
       </article>
     </section>
@@ -74,7 +68,7 @@
         }
 
         // Age
-        var birthday = new Date("03/05/1990");
+        var birthday = new Date("18/06/1993");
         var ageDate = new Date(Date.now() - birthday.getTime());
         var ageElements = document.getElementsByClassName("age");
 
