--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Thomas Mosmant" />
+    <meta name="author" content="Alexandre Rastel" />
     <meta
       name="description"
       content="I'm Alexandre, a Data Scientist with strong background of computer science and scalable architectures."
