--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <meta name="robots" content="index, follow" />
     <meta name="revisit-after" content="2 days" />
-    <title>Thomas Mosmant</title>
+    <title>Alexandre Rastel</title>
     <link
       href="https://fonts.googleapis.com/css?family=Raleway:400,600"
       rel="stylesheet"
